src/objects/Geographic_Territory_Assignment__c.object
<CustomObject>
    <description>This object defines geographic territory assignment by user and object type.</description>
    <fields>
        <fullName>Geographic_Territory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Geographic Territory</label>
        <referenceTo>Geographic_Territory__c</referenceTo>
        <relationshipLabel>Geographic Territory Assignments</relationshipLabel>
        <relationshipName>Geographic_Territory_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SObject_Type__c</fullName>
        <label>SObject Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Geographic_Territory_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Geographic Territory Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Geographic_Territory__c</columns>
        <columns>SObject_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geographic_Territory__c</field>
            <operation>contains</operation>
            <value>Dakota</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Geographic_Territory__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GTA-{0000000}</displayFormat>
        <label>Geographic Territory Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geographic Territory Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>